# CPL-assignment

./: CMakeLists.txt  E.c  LICENSE
1-types-io/: C.c  CMakeLists.txt  a1.c  a2.c  a4.c  a5.c  a6.c
10-double-pointers-struct/: A.c  B.c  C.c  D.c
2-if-for-array/: CMakeLists.txt  E.c  F.c  a10.c  a7.c  a8.c  a9.c
3-for-while/: A.c  B.c  C.c  D.c  E.c  F.c
4-loops/: A.c  B.c  C.c  CMakeLists.txt  D.c
5-function/: A.c  B.c  C.c  CMakeLists.txt  D.c  E.c  F.c  G.c
6-recursion/: A.c  B.c  C.c  D.c  E.c  F.c
7-data-types/: B.c  C-gpt.c  C.c  CMakeLists.txt  D.c  E.c  F.c  G.c
8-pointer/: A.c  B.c  C.c  CMakeLists.txt
9-pointers-c-strings/: A.c  B.c  C.c  CMakeLists.txt  D.c
