cmake_minimum_required(VERSION 3.26)
project(assignment C)

set(CMAKE_C_STANDARD 11)

add_executable(assignment main.c)
add_subdirectory(1-types-io)
add_subdirectory(2-if-for-array)
add_subdirectory(3-for-while)
add_subdirectory(4-loops)
add_subdirectory(5-function)
add_subdirectory(6-recursion)
add_subdirectory(7-data-types)
add_subdirectory(8-pointer)
add_subdirectory(9-pointers-c-strings)